--- a/app/src/main/res/layout/fragment_objects.xml
+++ b/app/src/main/res/layout/fragment_objects.xml
@@ -4,13 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".CategoriesFragment">
+    tools:context=".ObjectsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/collectionsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/collection_categories"
+        tools:listitem="@layout/object_item"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
