--- a/app/src/main/res/layout/fragment_object_information.xml
+++ b/app/src/main/res/layout/fragment_object_information.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ObjectInformationFragment">
 
 
@@ -27,11 +28,23 @@
                 android:textAlignment="center"
                 android:text="Название"/>
 
-            <LinearLayout
+            
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
-                android:background="@color/purple_200"
-                android:layout_margin="10dp"/>
+                app:cardCornerRadius="5dp"
+                app:cardElevation="6dp">
+
+                <com.denzcoskun.imageslider.ImageSlider
+                    android:id="@+id/imageSlider"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    app:iss_auto_cycle="true"
+                    app:iss_delay="0"
+                    app:iss_period="2500"/>
+
+            </androidx.cardview.widget.CardView>
+            
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -51,7 +64,7 @@
                     android:textSize="20sp"
                     android:textIsSelectable="true"
                     android:textColor="@color/black"
-                    android:text="9999"/>
+                    android:text=""/>
             </LinearLayout>
 
             <LinearLayout
@@ -73,7 +86,7 @@
                     android:textSize="20sp"
                     android:textIsSelectable="true"
                     android:textColor="@color/black"
-                    android:text="Великий Новгород"/>
+                    android:text=""/>
             </LinearLayout>
 
             <TextView
@@ -93,8 +106,27 @@
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginVertical="5dp"
                 android:textColor="@color/black"
-                android:text="@string/r_text"
                 android:textIsSelectable="true"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginVertical="5dp"
+                android:textColor="@color/black"
+                android:text="Местоположение:"/>
+
+            <TextView
+                android:id="@+id/maps"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginVertical="5dp"
+                android:textColor="@color/purple_200"
+                android:textStyle="italic"
+                android:text="Посмотреть на карте"/>
 
         </LinearLayout>
     </ScrollView>
