--- a/app/src/main/res/layout/box.xml
+++ b/app/src/main/res/layout/box.xml
@@ -22,9 +22,11 @@
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:padding="15dp"
-            android:background="@color/teal_200"
+            android:background="@color/beige3"
             android:text="Категория"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textColor="@color/dark_brown"
+            android:fontFamily="@font/vollkorn_bold"/>
     </LinearLayout>
 
 </LinearLayout>
