--- a/app/src/main/res/layout/city_item.xml
+++ b/app/src/main/res/layout/city_item.xml
@@ -9,23 +9,14 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/categoryImg"
-            android:layout_width="match_parent"
-            android:layout_height="230dp"
-            android:src="@color/purple_200"
-            android:scaleType="centerCrop"/>
-
         <TextView
             android:id="@+id/categoryName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
+            android:background="@color/dark_beige"
+            android:fontFamily="@font/vollkorn_semibold"
             android:padding="15dp"
-            android:background="@color/beige3"
-            android:textColor="@color/dark_brown"
-            android:fontFamily="@font/vollkorn_bold"
-            android:text="Категория"
+            android:text="Город"
             android:textSize="20sp" />
     </LinearLayout>
 
