--- a/app/src/main/res/layout/object_item.xml
+++ b/app/src/main/res/layout/object_item.xml
@@ -4,8 +4,9 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
-    android:layout_marginHorizontal="8dp"
-    android:layout_marginVertical="4dp">
+    android:layout_marginHorizontal="10dp"
+    android:background="@drawable/object_item_stroke"
+    android:layout_marginVertical="5dp">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/categoryImg"
@@ -27,8 +28,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="22sp"
+            android:textColor="@color/dark_brown"
             android:textStyle="bold"
-            android:textColor="@color/black"
+            android:fontFamily="@font/vollkorn_bold"
             android:text="Название"
             android:layout_marginBottom="5dp"/>
 
@@ -37,8 +39,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:textColor="@color/purple_200"
+            android:textColor="@color/beige3"
             android:text="Год"
+            android:fontFamily="@font/vollkorn_bold"
             android:layout_marginBottom="5dp"/>
 
     </LinearLayout>
