--- a/app/src/main/res/navigation/btn.xml
+++ b/app/src/main/res/navigation/btn.xml
@@ -59,10 +59,39 @@
         <action
             android:id="@+id/action_objectInformationFragment_to_mapFragment"
             app:destination="@id/mapFragment" />
+        <action
+            android:id="@+id/action_objectInformationFragment_to_testFragment"
+            app:destination="@id/testFragment" />
     </fragment>
     <fragment
         android:id="@+id/mapFragment"
         android:name="com.example.historyvn_project.MapFragment"
         android:label="fragment_map"
         tools:layout="@layout/fragment_map" />
+    <fragment
+        android:id="@+id/testFragment"
+        android:name="com.example.historyvn_project.TestFragment"
+        android:label="fragment_test"
+        tools:layout="@layout/fragment_test" >
+        <action
+            android:id="@+id/action_testFragment_to_testStartFragment"
+            app:destination="@id/testStartFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/testStartFragment"
+        android:name="com.example.historyvn_project.TestStartFragment"
+        android:label="fragment_test_start"
+        tools:layout="@layout/fragment_test_start" >
+        <action
+            android:id="@+id/action_testStartFragment_to_resultTestObjectFragment"
+            app:destination="@id/resultTestObjectFragment" />
+        <action
+            android:id="@+id/action_testStartFragment_to_objectInformationFragment"
+            app:destination="@id/objectInformationFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/resultTestObjectFragment"
+        android:name="com.example.historyvn_project.ResultTestObjectFragment"
+        android:label="fragment_result_test_object"
+        tools:layout="@layout/fragment_result_test_object" />
 </navigation>
