--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_brown">#5C3822</color>
+    <color name="beige">#DED0C3</color>
+    <color name="signatures">#885E41</color>
+    <color name="dark_beige">#D6B29A</color>
+    <color name="beige3">#BA8865</color>
 </resources>
