--- a/app/src/main/res/layout/test_object_item.xml
+++ b/app/src/main/res/layout/test_object_item.xml
@@ -10,6 +10,9 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:textColor="@color/black"
-        android:text="Название"/>
+        android:text="Название"
+        android:padding="10dp"
+        android:background="@drawable/object_item_stroke"
+        android:layout_marginBottom="10dp"/>
 
 </LinearLayout>
