--- a/app/src/main/res/layout/fragment_start_test.xml
+++ b/app/src/main/res/layout/fragment_start_test.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TestStartFragment">
-
+    tools:context=".StartTestFragment">
 
     <ScrollView
         android:id="@+id/scrollView2"
@@ -110,8 +109,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         android:layout_marginVertical="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <TextView
             android:layout_width="match_parent"
@@ -119,7 +118,7 @@
             android:text="Следующий вопрос"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="22sp"/>
+            android:textSize="22sp" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
